# intellewings_assessment

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
IOSCO_part2/: extracted_profiles.json  main.py  query_data.py  requirements.txt  reset_checkpoint.py
IOSCO_part2/src/: db.py  scrapper.py
sebi_scraper/: main.py  reset_checkpoint.py
sebi_scraper/config/: config.py
sebi_scraper/src/: database.py  extractor.py  scraper.py  sentiment.py  utils.py
