[project]
name = "intellewings-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "pymongo>=4.3.3",
    "pypdf2>=3.0.0",
    "python-dotenv>=0.21.0",
    "requests>=2.28.1",
    "selenium>=4.34.2",
    "spacy>=3.4.0",
    "torch>=1.13.0",
    "tqdm>=4.64.1",
    "transformers>=4.24.0",
    "webdriver-manager>=4.0.2",
]
